Use arrow to test results